# 75.74_sistemas_distribuidos_I_tp3

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  comments.csv  docker-compose-dev-2.yaml  docker-compose-dev.yaml  notebook.ipynb  posts.csv  shutdown.sh  start.sh
client/: Cargo.toml  Dockerfile
client/src/: main.rs
client/src/entities/: comment.rs  post.rs
client/src/utils/: file.rs  logger.rs  mod.rs  socket.rs
sender/: Cargo.toml  Dockerfile
sender/src/: main.rs
sender/src/entities/: comment.rs  mod.rs
sender/src/utils/: file.rs
server/: Cargo.toml  Dockerfile
server/src/: cleaner_handler.rs  client_responser.rs  main.rs
server/src/constants/: queues.rs
server/src/entities/: comment.rs  post.rs
server/src/handlers/: handle.rs
server/src/messages/: mod.rs
server/src/utils/: logger.rs  middleware.rs  mod.rs  rabbitmq.rs  socket.rs
src/: main.rs
src/commons/: mod.rs
src/commons/constants/: filename.rs  host.rs  mod.rs  opcodes.rs  (+1 more)
worker_avg/: Cargo.toml  Dockerfile
worker_avg/src/: main.rs
worker_filter/: Cargo.toml  Dockerfile
worker_filter/src/: main.rs
worker_filter_score/: Cargo.toml  Dockerfile
worker_filter_score/src/: main.rs
worker_filter_students/: Cargo.toml  Dockerfile
worker_filter_students/src/: main.rs
worker_group_by/: Cargo.toml  Dockerfile
worker_group_by/src/: main.rs
worker_initial_state/: Cargo.toml  Dockerfile
worker_initial_state/src/: main.rs
worker_join/: Cargo.toml  Dockerfile
worker_join/src/: main.rs
worker_map/: Cargo.toml  Dockerfile
worker_map/src/: main.rs
(+108 files in other folders)
