[package]
name = "reddit-meme-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4.2"
serde_json = "1.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
ctrlc = { version = "3.2.2", features = ["termination"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
csv = "1.1"